bg-animation small bug fixes

--- a/src/sass/Pages/_mainPage.scss
+++ b/src/sass/Pages/_mainPage.scss
@@ -3,7 +3,7 @@
   justify-content: space-around;
   align-items: center;
   margin-top: 7rem;
-  padding: 0 1rem;
+  padding: 0 0.1rem;
 
   .presentaion {
     .about-resume {
